tests/invalid/undef_imported_mode.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module undef_imported_mode.

:- interface.

:- import_module io.

:- pred main(io::di, io::uo) is det.

%---------------------------------------------------------------------------%

:- implementation.

:- import_module undef_imported_mode_helper_1.

main(!IO) :-
    bad(42, N),
    io.write_int(N, !IO).
